# DiscogsRenamer

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md  app_settings.py  auth_data_class.py  auth_manager.py  constants.py  discogs_manager.py  filename_rules.py  invalid_char_model.py  main.py  main_manager.py  pyproject.toml  release_data.py  settings_dialog.py  settings_protocol.py  token_dialog.py  token_manager.py  track_data.py
.github/workflows/: ci.yml  release.yml
core/: app_settings.py  constants.py  discogs_manager.py  main_manager.py
core/models/: track_data.py
discogsrenamer/core/: app_settings.py  constants.py  discogs_manager.py  filename_rules.py  main_manager.py
discogsrenamer/core/models/: track_data.py
discogsrenamer/gui/: main_window.py  utils.py
discogsrenamer/gui/dialogs/: about_messagebox.py  (+2 more)
gui/: about_messagebox.py  file_list_item.py  filename_list_item.py  invalid_char_tableview.py  list_item_widget.py  main_window.py  release_list_item.py  settings_dialog_gui.py  token_dialog.py  token_dialog_gui.py  toolbar.py  tracklist.py  tracklist_item.py  utils.py
gui/dialogs/: about_messagebox.py  settings_dialog.py  settings_dialog_gui.py
gui/widgets/: filename_list_item.py  invalid_char_tableview.py  list_item_widget.py  release_list_item.py  tracklist.py
scripts/: setup-system.ps1  setup-system.sh
tests/: conftest.py  test_discogs_manager.py  test_main_manager.py  test_main_window.py  test_settings_dialog.py  test_token_dialog.py  test_token_manager.py  test_toolbar.py  test_tracklist.py  test_tracklist_item.py  test_utils.py
(+6 files in other folders)
