[project]
name = "discogsrenamer"
version = "0.1.0"
description = """\
  A PyQt based GUI application for automating \
  the process of renaming mp3 files in a folder \
  using a chosen Discogs release \
  """
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyqt6>=6.9.1", "python3-discogs-client>=2.8"]

[dependency-groups]
dev = ["black>=25.1.0", "pytest>=8.4.1", "pytest-qt>=4.5.0"]

[tool.black]
line-length = 88
target-version = ['py311']
