[project]
name = "discogsrenamer"
version = "1.0.0"
description = """
A PyQt6-based desktop application that automates renaming audio files in a folder
using tracklisting data from a selected Discogs release
"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pyqt6>=6.9.1", "python3-discogs-client>=2.8"]

[dependency-groups]
dev = ["black>=25.1.0", "pytest>=8.4.1", "pytest-qt>=4.5.0"]

[tool.black]
line-length = 88
target-version = ['py312']
